--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,8 +1,10 @@
 // Body
 $bg-color: #0c0c0c   !default;
-$theme-pink: #c00983 !default;
+$theme-pink: #c60581 !default;
 $theme-purple: #3229a8 !default;
 $theme-yellow: #f3e872 !default;
+$horizon: #5f77ff9a !default;
+$horizon-second: #d2deff !default;
 
 
 // Breakpoints
