--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,9 @@
 
     
     <header class="page-header">
-      <div class="particle-js" id="particle-js"> </div>
+      <div class="particle-js" id="particle-js"></div>
+
+      <div id="halo"></div>
       
       <img src="{{ site.baseurl }}/assets/main/logo.png" alt="logo"/>
 
