--- a/_sass/animations.scss
+++ b/_sass/animations.scss
@@ -70,3 +70,22 @@
         filter: drop-shadow(0px 0px 6px $theme-yellow);
     }
 }
+
+@keyframes noise-anim{
+    $steps:10;
+    @for $i from 0 through $steps{
+        #{percentage($i*(1/$steps))}{
+        clip:rect(random(100)+px,9999px,random(100)+px,0);
+        }
+    }
+}
+
+  
+@keyframes noise-anim-2{
+    $steps:10;
+    @for $i from 0 through $steps{
+        #{percentage($i*(1/$steps))}{
+        clip:rect(random(100)+px,9999px,random(100)+px,0);
+        }
+    }
+}
