--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -3,8 +3,15 @@ $bg-color: #0c0c0c   !default;
 $theme-pink: #c60581 !default;
 $theme-purple: #3229a8 !default;
 $theme-yellow: #f3e872 !default;
+$off-white: #f4f4ff !default;
+
 $horizon: #5f77ff9a !default;
 $horizon-second: #d2deff !default;
+
+
+// Glitch colors
+$glitch:#5e76ff !default;
+$glitch-secondary: #c60581 !default;
 
 
 // Breakpoints
@@ -23,7 +30,7 @@ $chapter-color-secondary: #969ee9 !default;
 // Text
 $section-headings-color: #ffe2e2 !default;
 $body-text-color: #ffffff !default;
-$body-link-color: #ffffff !default;
+$body-link-color: #adc3ff !default;
 $blockquote-text-color: #ffffff !default;
 
 // Code
