--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -9,23 +9,23 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:900i&display=swap');
 
 
-// @mixin large {
-//   @media screen and (min-width: #{$large-breakpoint}) {
-//     @content;
-//   }
-// }
+@mixin large {
+  @media screen and (min-width: #{$large-breakpoint}) {
+    @content;
+  }
+}
 
-// @mixin medium {
-//   @media screen and (min-width: #{$medium-breakpoint}) and (max-width: #{$large-breakpoint}) {
-//     @content;
-//   }
-// }
+@mixin medium {
+  @media screen and (min-width: #{$medium-breakpoint}) and (max-width: #{$large-breakpoint}) {
+    @content;
+  }
+}
 
-// @mixin small {
-//   @media screen and (max-width: #{$medium-breakpoint}) {
-//     @content;
-//   }
-// }
+@mixin small {
+  @media screen and (max-width: #{$medium-breakpoint}) {
+    @content;
+  }
+}
 
 * {
   box-sizing: border-box;
@@ -140,22 +140,22 @@ a {
     margin-top: 0;
   }
 
-  // @include large {
-  //   max-width: 64rem;
-  //   padding: 2rem 6rem;
-  //   margin: 0 auto;
-  //   font-size: 1.1rem;
-  // }
+  @include large {
+    max-width: 64rem;
+    padding: 2rem 6rem;
+    margin: 0 auto;
+    font-size: 1.1rem;
+  }
 
-  // @include medium {
-  //   padding: 2rem 4rem;
-  //   font-size: 1.1rem;
-  // }
+  @include medium {
+    padding: 2rem 4rem;
+    font-size: 1.1rem;
+  }
 
-  // @include small {
-  //   padding: 2rem 1rem;
-  //   font-size: 1rem;
-  // }
+  @include small {
+    padding: 2rem 1rem;
+    font-size: 1rem;
+  }
   
   kbd {
     background-color: #fafbfc;
@@ -198,17 +198,17 @@ a {
   margin-top: 2rem;
   border-top: solid 1px $hr-border-color;
 
-  // @include large {
-  //   font-size: 1rem;
-  // }
+  @include large {
+    font-size: 1rem;
+  }
 
-  // @include medium {
-  //   font-size: 1rem;
-  // }
+  @include medium {
+    font-size: 1rem;
+  }
 
-  // @include small {
-  //   font-size: 0.9rem;
-  // }
+  @include small {
+    font-size: 0.9rem;
+  }
 }
 
 .site-footer-owner {
