--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -28,7 +28,7 @@
 
     <!-- Navigation -->
     <div class="chapter-nav" id="first-nav">
-        <a title="first" href="{{ baseurl }}{{ site.archive.first.url }}"><img class="left" src="{{ baseurl }}/assets/main/first.png"></a>
+        <a title="first" href="{{ baseurl }}{{ site.archive.first.url }}"><img class="left" src="{{ site.baseurl }}/assets/main/first.png"></a>
         <a title="previous" href="{{ prev_link }}"><img class="left" src="{{ site.baseurl }}/assets/main/previous.png"></a>
    
         <div class="content">
@@ -37,7 +37,7 @@
          
           
         <a title="next" href="{{ next_link }}"><img class="right" src="{{ site.baseurl }}/assets/main/next.png"></a>
-        <a title="last" href="{{ baseurl }}{{ site.archive.last.url }}"><img class="right" src="{{ baseurl }}/assets/main/last.png"></a>
+        <a title="last" href="{{ baseurl }}{{ site.archive.last.url }}"><img class="right" src="{{ site.baseurl }}/assets/main/last.png"></a>
     </div>
 
     <div id="modal-container">
