--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -3,8 +3,8 @@
 {% assign base_url = "https://caovicto.github.io/CaliaNova/ %}
 
 <!-- Assign next and prev variables -->
-{% assign prev_link = {{base_url}} | append: "/archive" %}
-{% assign next_link = {{base_url}} | append: "/archive" %}
+{% assign prev_link = "https://caovicto.github.io/CaliaNova/archive" %}
+{% assign next_link = "https://caovicto.github.io/CaliaNova/archive" %}
 
 {% for post in site.archive %}
     {% if post.title == page.title %}
@@ -28,7 +28,7 @@
 
     <!-- Navigation -->
     <div class="chapter-nav" id="first-nav">
-        <a title="first" href="{{base_url}}{{ site.archive.first.url }}"><img class="left" src="{{ site.baseurl }}/assets/main/first.png"></a>
+        <a title="first" href="https://caovicto.github.io/CaliaNova/{{ site.archive.first.url }}"><img class="left" src="{{ site.baseurl }}/assets/main/first.png"></a>
         <a title="previous" href="{{ prev_link }}"><img class="left" src="{{ site.baseurl }}/assets/main/previous.png"></a>
    
         <div class="content">
@@ -37,7 +37,7 @@
          
           
         <a title="next" href="{{ next_link }}"><img class="right" src="{{ site.baseurl }}/assets/main/next.png"></a>
-        <a title="last" href="{{base_url}}{{ site.archive.last.url }}"><img class="right" src="{{ site.baseurl }}/assets/main/last.png"></a>
+        <a title="last" href="https://caovicto.github.io/CaliaNova/{{ site.archive.last.url }}"><img class="right" src="{{ site.baseurl }}/assets/main/last.png"></a>
     </div>
 
     <div id="modal-container">
@@ -50,7 +50,7 @@
           <div class="modal-body">
             <ul>
               {% for chapter in site.archive %}
-              <li><a href="{{base_url}}{{ chapter.url }}" class="dropdown-item">{{ chapter.title }}</a></li>
+              <li><a href="https://caovicto.github.io/CaliaNova/{{ chapter.url }}" class="dropdown-item">{{ chapter.title }}</a></li>
               {% endfor %}
             </ul>
           </div>
