--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -5,7 +5,7 @@ $theme-purple: #3229a8 !default;
 $theme-yellow: #f3e872 !default;
 $off-white: #f4f4ff !default;
 
-$horizon: #5f77ff9a !default;
+$horizon: #8a5fff9a !default;
 $horizon-second: #d2deff !default;
 
 
@@ -30,7 +30,7 @@ $chapter-color-secondary: #969ee9 !default;
 // Text
 $section-headings-color: #ffe2e2 !default;
 $body-text-color: #ffffff !default;
-$body-link-color: #adc3ff !default;
+$body-link-color: #bfadff !default;
 $blockquote-text-color: #ffffff !default;
 
 // Code
