--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -34,12 +34,12 @@
         <div class="content">
           <div title="Chapter List" id="chapter-list" class="chapter-btn">{{ page.title }}</div>
         </div>
-         
           
         <a title="next" href="{{ next_link }}"><img class="right" src="{{ site.baseurl }}/assets/main/next.png"></a>
         <a title="last" href="{{ base_url }}{{ site.archive.last.url }}"><img class="right" src="{{ site.baseurl }}/assets/main/last.png"></a>
     </div>
 
+    <!-- Chaper Modal -->
     <div id="modal-container">
       <div class="modal-background">
         <div class="modal">    
@@ -59,6 +59,8 @@
       </div>
     </div>
     
+
+    <!-- Chapter Content -->
     <div class="chapter-pages">
       <!-- Images -->
       {% assign files = site.static_files %}
@@ -68,6 +70,19 @@
         {% endif %}
       {% endfor %}
     </div>
+
+    <!-- Navigation -->
+    <div class="chapter-nav" id="first-nav">
+      <a title="first" href="{{ base_url }}{{ site.archive.first.url }}"><img class="left" src="{{ site.baseurl }}/assets/main/first.png"></a>
+      <a title="previous" href="{{ prev_link }}"><img class="left" src="{{ site.baseurl }}/assets/main/previous.png"></a>
+  
+      <div class="content">
+        <div title="Chapter List" id="chapter-list" class="chapter-btn">{{ page.title }}</div>
+      </div>
+        
+      <a title="next" href="{{ next_link }}"><img class="right" src="{{ site.baseurl }}/assets/main/next.png"></a>
+      <a title="last" href="{{ base_url }}{{ site.archive.last.url }}"><img class="right" src="{{ site.baseurl }}/assets/main/last.png"></a>
+  </div>
 
 </div>
 
